// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Modal
  onRequestClose={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.2)",
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  visible={true}
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,0.1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={1}
      focusedOpacity={0.7}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#e8eaeb",
          "height": 1067.2,
          "left": 75,
          "paddingBottom": 50,
          "paddingLeft": 40,
          "paddingRight": 40,
          "paddingTop": 20,
          "position": "absolute",
          "top": 133.4,
          "width": 600,
        }
      }
    >
      <ModalCloseButton
        close={[Function]}
      />
      <ModalHeader
        modalName="PUNCH IN OR OUT"
      />
      <RowNB
        size={5}
      />
      <RowNB
        size={13}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <ColumnNB />
        <ColumnNB
          size={2}
        >
          <RowNB>
            <ColumnNB
              size={1}
            >
              <IconButton
                active={true}
                price={1}
                style={
                  Object {
                    "backgroundColor": "#404048",
                    "height": 90,
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
                }
                text="KASPER SJ"
              />
            </ColumnNB>
            <ColumnNB
              size={3}
              style={
                Object {
                  "marginLeft": 45,
                  "paddingTop": 5,
                }
              }
            >
              <RowNB
                size={1}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fff",
                        "fontFamily": "Gotham-Book",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#313138",
                        "fontSize": 10,
                      },
                    ]
                  }
                >
                  KASPER SJ
                </Text>
              </RowNB>
              <RowNB
                size={3}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fff",
                        "fontFamily": "Gotham-Book",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#313138",
                        "fontSize": 23,
                      },
                    ]
                  }
                >
                  You are not checked in
                </Text>
              </RowNB>
            </ColumnNB>
          </RowNB>
          <RowNB>
            <ButtonItem
              disabled={false}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "marginLeft": 0,
                    "marginRight": 40,
                  },
                  Object {
                    "backgroundColor": "#3cb671",
                    "marginRight": 0,
                  },
                ]
              }
              text="Punch In"
              textStyle={
                Array [
                  Object {
                    "color": "#fefefe",
                    "fontSize": 16,
                  },
                ]
              }
            />
          </RowNB>
          <RowNB>
            <ButtonItem
              disabled={true}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "marginLeft": 0,
                    "marginRight": 40,
                  },
                  Object {
                    "backgroundColor": "#bec3c7",
                    "marginRight": 0,
                  },
                ]
              }
              text="Punch Out"
              textStyle={
                Array [
                  Object {
                    "color": "#fefefe",
                    "fontSize": 16,
                  },
                ]
              }
            />
          </RowNB>
          <RowNB>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontFamily": "Gotham-Book",
                    "fontSize": 14,
                  },
                  Object {
                    "color": "#313138",
                    "fontSize": 10,
                    "marginTop": 40,
                  },
                ]
              }
            />
          </RowNB>
        </ColumnNB>
        <ColumnNB />
      </RowNB>
    </TouchableOpacity>
  </TouchableOpacity>
</Modal>
`;

exports[`renders correctly active 1`] = `
<Modal
  onRequestClose={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.2)",
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  visible={true}
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,0.1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={1}
      focusedOpacity={0.7}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#e8eaeb",
          "height": 1067.2,
          "left": 75,
          "paddingBottom": 50,
          "paddingLeft": 40,
          "paddingRight": 40,
          "paddingTop": 20,
          "position": "absolute",
          "top": 133.4,
          "width": 600,
        }
      }
    >
      <ModalCloseButton
        close={[Function]}
      />
      <ModalHeader
        modalName="PUNCH IN OR OUT"
      />
      <RowNB
        size={5}
      />
      <RowNB
        size={13}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <ColumnNB />
        <ColumnNB
          size={2}
        >
          <RowNB>
            <ColumnNB
              size={1}
            >
              <IconButton
                active={true}
                price={1}
                style={
                  Object {
                    "backgroundColor": "#404048",
                    "height": 90,
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
                }
                text="KASPER SJ"
              />
            </ColumnNB>
            <ColumnNB
              size={3}
              style={
                Object {
                  "marginLeft": 45,
                  "paddingTop": 5,
                }
              }
            >
              <RowNB
                size={1}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fff",
                        "fontFamily": "Gotham-Book",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#313138",
                        "fontSize": 10,
                      },
                    ]
                  }
                >
                  KASPER SJ
                </Text>
              </RowNB>
              <RowNB
                size={3}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fff",
                        "fontFamily": "Gotham-Book",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#313138",
                        "fontSize": 23,
                      },
                    ]
                  }
                >
                  You are currently checked in
                </Text>
              </RowNB>
            </ColumnNB>
          </RowNB>
          <RowNB>
            <ButtonItem
              disabled={true}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "marginLeft": 0,
                    "marginRight": 40,
                  },
                  Object {
                    "backgroundColor": "#bec3c7",
                    "marginRight": 0,
                  },
                ]
              }
              text="Punch In"
              textStyle={
                Array [
                  Object {
                    "color": "#fefefe",
                    "fontSize": 16,
                  },
                ]
              }
            />
          </RowNB>
          <RowNB>
            <ButtonItem
              disabled={false}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "marginLeft": 0,
                    "marginRight": 40,
                  },
                  Object {
                    "backgroundColor": "#3cb671",
                    "marginRight": 0,
                  },
                ]
              }
              text="Punch Out"
              textStyle={
                Array [
                  Object {
                    "color": "#fefefe",
                    "fontSize": 16,
                  },
                ]
              }
            />
          </RowNB>
          <RowNB>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontFamily": "Gotham-Book",
                    "fontSize": 14,
                  },
                  Object {
                    "color": "#313138",
                    "fontSize": 10,
                    "marginTop": 40,
                  },
                ]
              }
            />
          </RowNB>
        </ColumnNB>
        <ColumnNB />
      </RowNB>
    </TouchableOpacity>
  </TouchableOpacity>
</Modal>
`;

exports[`renders correctly active with timestamp 1`] = `
<Modal
  onRequestClose={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.2)",
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  visible={true}
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,0.1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={1}
      focusedOpacity={0.7}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#e8eaeb",
          "height": 1067.2,
          "left": 75,
          "paddingBottom": 50,
          "paddingLeft": 40,
          "paddingRight": 40,
          "paddingTop": 20,
          "position": "absolute",
          "top": 133.4,
          "width": 600,
        }
      }
    >
      <ModalCloseButton
        close={[Function]}
      />
      <ModalHeader
        modalName="PUNCH IN OR OUT"
      />
      <RowNB
        size={5}
      />
      <RowNB
        size={13}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <ColumnNB />
        <ColumnNB
          size={2}
        >
          <RowNB>
            <ColumnNB
              size={1}
            >
              <IconButton
                active={true}
                price={1}
                style={
                  Object {
                    "backgroundColor": "#404048",
                    "height": 90,
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
                }
                text="KASPER SJ"
              />
            </ColumnNB>
            <ColumnNB
              size={3}
              style={
                Object {
                  "marginLeft": 45,
                  "paddingTop": 5,
                }
              }
            >
              <RowNB
                size={1}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fff",
                        "fontFamily": "Gotham-Book",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#313138",
                        "fontSize": 10,
                      },
                    ]
                  }
                >
                  KASPER SJ
                </Text>
              </RowNB>
              <RowNB
                size={3}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fff",
                        "fontFamily": "Gotham-Book",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#313138",
                        "fontSize": 23,
                      },
                    ]
                  }
                >
                  You are currently checked in
                </Text>
              </RowNB>
            </ColumnNB>
          </RowNB>
          <RowNB>
            <ButtonItem
              disabled={true}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "marginLeft": 0,
                    "marginRight": 40,
                  },
                  Object {
                    "backgroundColor": "#bec3c7",
                    "marginRight": 0,
                  },
                ]
              }
              text="Punch In"
              textStyle={
                Array [
                  Object {
                    "color": "#fefefe",
                    "fontSize": 16,
                  },
                ]
              }
            />
          </RowNB>
          <RowNB>
            <ButtonItem
              disabled={false}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "marginLeft": 0,
                    "marginRight": 40,
                  },
                  Object {
                    "backgroundColor": "#3cb671",
                    "marginRight": 0,
                  },
                ]
              }
              text="Punch Out"
              textStyle={
                Array [
                  Object {
                    "color": "#fefefe",
                    "fontSize": 16,
                  },
                ]
              }
            />
          </RowNB>
          <RowNB>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontFamily": "Gotham-Book",
                    "fontSize": 14,
                  },
                  Object {
                    "color": "#313138",
                    "fontSize": 10,
                    "marginTop": 40,
                  },
                ]
              }
            >
              CURRENT LOGGED TIME 0:0
            </Text>
          </RowNB>
        </ColumnNB>
        <ColumnNB />
      </RowNB>
    </TouchableOpacity>
  </TouchableOpacity>
</Modal>
`;

exports[`renders correctly timestamp 1`] = `
<Modal
  onRequestClose={[Function]}
  style={
    Object {
      "backgroundColor": "rgba(255, 255, 255, 0.2)",
      "bottom": 0,
      "left": 0,
      "right": 0,
      "top": 0,
    }
  }
  visible={true}
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "backgroundColor": "rgba(255,255,255,0.1)",
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <TouchableOpacity
      activeOpacity={1}
      focusedOpacity={0.7}
      onPress={[Function]}
      style={
        Object {
          "backgroundColor": "#e8eaeb",
          "height": 1067.2,
          "left": 75,
          "paddingBottom": 50,
          "paddingLeft": 40,
          "paddingRight": 40,
          "paddingTop": 20,
          "position": "absolute",
          "top": 133.4,
          "width": 600,
        }
      }
    >
      <ModalCloseButton
        close={[Function]}
      />
      <ModalHeader
        modalName="PUNCH IN OR OUT"
      />
      <RowNB
        size={5}
      />
      <RowNB
        size={13}
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          }
        }
      >
        <ColumnNB />
        <ColumnNB
          size={2}
        >
          <RowNB>
            <ColumnNB
              size={1}
            >
              <IconButton
                active={true}
                price={1}
                style={
                  Object {
                    "backgroundColor": "#404048",
                    "height": 90,
                    "marginLeft": 0,
                    "marginRight": 0,
                  }
                }
                text="KASPER SJ"
              />
            </ColumnNB>
            <ColumnNB
              size={3}
              style={
                Object {
                  "marginLeft": 45,
                  "paddingTop": 5,
                }
              }
            >
              <RowNB
                size={1}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fff",
                        "fontFamily": "Gotham-Book",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#313138",
                        "fontSize": 10,
                      },
                    ]
                  }
                >
                  KASPER SJ
                </Text>
              </RowNB>
              <RowNB
                size={3}
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Array [
                      Object {
                        "color": "#fff",
                        "fontFamily": "Gotham-Book",
                        "fontSize": 14,
                      },
                      Object {
                        "color": "#313138",
                        "fontSize": 23,
                      },
                    ]
                  }
                >
                  You are not checked in
                </Text>
              </RowNB>
            </ColumnNB>
          </RowNB>
          <RowNB>
            <ButtonItem
              disabled={false}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "marginLeft": 0,
                    "marginRight": 40,
                  },
                  Object {
                    "backgroundColor": "#3cb671",
                    "marginRight": 0,
                  },
                ]
              }
              text="Punch In"
              textStyle={
                Array [
                  Object {
                    "color": "#fefefe",
                    "fontSize": 16,
                  },
                ]
              }
            />
          </RowNB>
          <RowNB>
            <ButtonItem
              disabled={true}
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "marginLeft": 0,
                    "marginRight": 40,
                  },
                  Object {
                    "backgroundColor": "#bec3c7",
                    "marginRight": 0,
                  },
                ]
              }
              text="Punch Out"
              textStyle={
                Array [
                  Object {
                    "color": "#fefefe",
                    "fontSize": 16,
                  },
                ]
              }
            />
          </RowNB>
          <RowNB>
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontFamily": "Gotham-Book",
                    "fontSize": 14,
                  },
                  Object {
                    "color": "#313138",
                    "fontSize": 10,
                    "marginTop": 40,
                  },
                ]
              }
            >
              CURRENT LOGGED TIME 0:0
            </Text>
          </RowNB>
        </ColumnNB>
        <ColumnNB />
      </RowNB>
    </TouchableOpacity>
  </TouchableOpacity>
</Modal>
`;
